--- a/success.html
+++ b/success.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1 class="display-4">Awesome!</h1>
     <p class="lead">You are now a member of GrinderGifts!</p>
-    <a href="index.html">
+    <a href="https://GrinderGifts.com">
     <button type="link" name="">Return</button></a>
   </div>
 </div>
